force-app/main/default/objects/vlocity_cmt__VlocityStateTransitionRule__c/fields/vlocity_cmt__FailureMessage__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__FailureMessage__c</fullName>
    <label>Failure Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>