force-app/main/default/objects/vlocity_cmt__VlocityStateTransitionRule__c/fields/vlocity_cmt__Message__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Message__c</fullName>
    <label>Success Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>